# Flamme-desktop

./: .gitignore  README.md
flamme-backend/: .env.example  .gitignore  README.md  pyproject.toml
flamme-backend/agents/: agents.yaml
flamme-backend/agents/prompts/: default.md
flamme-backend/plugin/: esbuild.config.mjs  main.css  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
flamme-backend/plugin/src/: commands.ts  context-menu.ts  main.ts  settings.ts  types.ts
flamme-backend/scripts/: build_sidecar.ps1  build_sidecar.spec  diagnose_ppt.py  pyinstaller_entry.py  start.ps1
flamme-backend/src/: config.py  deps_check.py
flamme-backend/src/agent/: context_manager.py  context_types.py  coordinator.py  ingest_stages.py  interfaces.py  learn_mind.py  learn_note.py  mastery_quiz.py  orchestrator.py  retrieval_ladder.py  worker.py  workers.py
flamme-backend/src/api/: app.py  deps.py  (+3 more)
flamme-backend/tests/: helpers.py  test_binary_paths.py  test_chat_truncate.py  test_checkpoint.py  test_db_client.py  test_document_ops.py  test_e2e.py  test_e2e_phase2.py  test_embed_index.py  test_embedding_store.py  test_entity_enrich.py  test_entity_health.py  test_entity_maintain.py  test_entity_state.py  test_graph.py  test_graph_algorithms.py  test_ingest_progress.py  test_interfaces.py  test_link_resolver.py  test_llm_queue.py  test_markdown_entity_stage.py  test_markdown_parser.py  test_mastery_quiz.py  test_multi_agent.py  test_tool_registry.py  test_vault_context.py  test_vault_ops.py  test_wiki_ops.py  test_wiki_pages_paths.py
(+302 files in other folders)
